Pemasukan ubah ke transaksi, CRUD selesai

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,4 +50,13 @@ body {
   /* Add your desired styles here */
 }
 
+
+.text-success {
+  color: green;
+}
+
+.text-danger {
+  color: red;
+}
+
    
