styling untuk transaksi sama moneybox

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,21 @@ h2 {
   border-top-right-radius: 0;
 }
 
+.card form {
+  margin: 0;
+}
+
+.btn-primary {
+  background-color: #FFA559;
+  border-color: #FFA559;
+}
+
+.alert {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-bottom: -28px;
+}
+
 nav {
   background-color: #FFA559;
   height: 54px;
@@ -80,9 +95,11 @@ nav .container {
 .card {
   overflow-y: scroll;
   max-height: 70vh;
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
   color: #FFF;
   background-color: #454545;
+  border-color: #454545;
+  border-width: 1.5rem;
   border-radius: 15px;
 }
 
@@ -121,7 +138,7 @@ nav .container {
 }
 
 .white-bar * {
-  color: black;
+  color: #454545;
 }
 
 .white-bar form {
@@ -131,12 +148,14 @@ nav .container {
 .white-bar .btn-danger {
   color: #FFF!important;
   position: relative;
-  height: 25px;
-  width: 25px;
-  top: -25px;
-  left: 101%;
+  font-size: 14px;
+  height: 20px;
+  width: 35px;
+  top: -15px;
+  left: 96.8%;
   padding: 0;
   margin-bottom: -30px;
+  border-top-right-radius: 11px;
 }
 
 .white-bar .hidden {
@@ -162,7 +181,7 @@ nav .container {
   position: absolute;
   height: 100vh;
   top: 0;
-  left: -500px;
+  left: -200px;
   background-color: #454545;
   z-index: 100;
   border-right:#404040 solid;
