--- a/public/css/login.css
+++ b/public/css/login.css
@@ -40,6 +40,5 @@ button:focus {
 #brown {
     display: flex;
     background-color: #454545;
-    height: 100%;
-    /* width: 150%; */
+    height: 100vh;
 }
